--- a/src/main/resources/templates/editbook.html
+++ b/src/main/resources/templates/editbook.html
@@ -14,6 +14,11 @@
                 <p>Year: <input type="text" th:field="*{publicationYear}"></p>
                 <p>ISBN: <input type="text" th:field="*{isbn}"></p>
                 <p>Price: <input type="text" th:field="*{price}"></p>
+                <p>Category:
+                    <select th:field="*{category}">
+                        <option th:each="category : ${categories}" th:value="${category.id}" th:text="${category.name}"></option>
+                    </select>
+                </p>
                 <p><input type="submit" value="Save"></p>
             </form>
             <a href="/booklist">Cancel</a>
