--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,6 +6,6 @@
     <title>Welcome!</title>
 </head>
 <body>
-    
+    <p>This is the index page to Bookstore. Change the endpoint to http://localhost:8080/booklist to test out features.</p>
 </body>
 </html>
