--- a/src/main/resources/templates/addbook.html
+++ b/src/main/resources/templates/addbook.html
@@ -15,7 +15,7 @@
                 <p>Price: <input type="text" th:field="*{price}"></p>
                 <p>Category:
                     <select th:field="*{category}">
-                        <option th:each="category : ${categories}" th:value="${category.id}" th:text="${category.name}"></option>
+                        <option th:each="category : ${categories}" th:value="${category.categoryid}" th:text="${category.name}"></option>
                     </select>
                 </p>
                 <p><input type="submit" value="Save"></p>
