--- a/src/main/resources/templates/categorylist.html
+++ b/src/main/resources/templates/categorylist.html
@@ -17,8 +17,8 @@
         <tbody>
             <tr th:each = "category : ${categories}">
                 <td th:text="${category.name}"></td>
-                <td><a th:href="@{/deletecategory/{id}(id=${category.id})}" class="btn btn-danger">Delete</a></td>
-                <td><a th:href="@{/editcategory/{id}(id=${category.id})}" class="btn btn-warning">Edit</a></td>
+                <td><a th:href="@{/deletecategory/{id}(id=${category.categoryid})}" class="btn btn-danger">Delete</a></td>
+                <td><a th:href="@{/editcategory/{id}(id=${category.categoryid})}" class="btn btn-warning">Edit</a></td>
             </tr>
         </tbody>
     </table>
