--- a/src/main/resources/templates/editcategory.html
+++ b/src/main/resources/templates/editcategory.html
@@ -7,8 +7,8 @@
 </head>
 <body>
         <h1>Edit book</h1>
-            <form th:action="@{/updatecategory/{id}(id=${category.id})}" th:object="${category}" method="post">
-                <input type="hidden" th:field="*{id}" />
+            <form th:action="@{/updatecategory/{id}(id=${category.categoryid})}" th:object="${category}" method="post">
+                <input type="hidden" th:field="*{categoryid}" />
                 <p>Category: <input type="text" th:field="*{name}"></p>
                 <p><input type="submit" value="Save"></p>
             </form>
